--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,12 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+{% extends 'blog/base.html'%}
+{%block content%}
+    {%for post in posts%}
+        <div class='post'>
+            <h2><a href="{%url 'post_detail' pk=post.pk%}">{{post.title}}</a></h2>
+            <p>{{post.text|linebreaksbr}}</p>
+            <div class='date'>
+                <p>published on:{{post.created_date}}</p>
+            </div>
         </div>
-
-        <div>
-            {%for post in posts%}
-                <div>
-                    
-                    <h2><a href="">{{post.title}}</a></h2>
-                    <p>{{post.text|linebreaksbr}}</p>
-                    <p>
-                        published on:{{post.created_date}}
-                    </p>
-                </div>
-            {%endfor%}
-        </div>
-    </body>
-</html>
+    {%endfor%}
+{%endblock%}
