--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,5 +5,7 @@
     <div class=date>
         <p>{{post.created_date}} by {{post.author}}</p>
     </div>
+    {%if user.is_authenticated%}
     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    {%endif%}
 {%endblock%}
